Issue #5734: BufferedRWPair was poorly tested and had several glaring bugs. Patch by Brian Quinlan.